matroskademux: Don't unlock stream lock without locking it first

https://bugzilla.gnome.org/show_bug.cgi?id=702167